<?xml version="1.0"?>
<package format="2">
  <name>rqt_rosparam</name>
  <version>0.1.0</version>
  <description>The rqt_rosparam package</description>
  <maintainer email="markobausch+ros@protonmail.com">Marko Bausch</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/markobausch/rqt_rosparm</url>
  <url type="bugtracker">https://github.com/markobausch/rqt_rosparm/issues</url>

  <author>Marko Bausch</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>

</package>
